# 3dModelingFun

./: .gitignore  README.md
3dModeler/: CMakeLists.txt
3dModeler/applications/: CMakeLists.txt  cone.cpp  entry.cpp  sphere.cpp  template.cpp
3dModeler/lib/: CMakeLists.txt  Point3D.cpp  Point3D.hpp  Solid.hpp  solid.cpp  solid.h
3dModeler/lib/vectors/: CMakeLists.txt  Vector.cpp  Vector.hpp  Vector3D.cpp  Vector3D.hpp  vectors.hpp
